// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example > Empty matches snapshot 1`] = `
Object {
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__k": null,
  "constructor": undefined,
  "key": null,
  "props": Object {},
  "ref": null,
  "type": [Function],
}
`;

exports[`Example > Error matches snapshot 1`] = `
Object {
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__k": null,
  "constructor": undefined,
  "key": null,
  "props": Object {},
  "ref": null,
  "type": [Function],
}
`;

exports[`Example > Example matches snapshot 1`] = `
Object {
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__k": null,
  "constructor": undefined,
  "key": undefined,
  "props": Object {
    "children": "Woof",
    "href": "#",
    "summary": "Jumps over the lazy dog",
    "title": "Quick brown fox",
  },
  "ref": undefined,
  "type": [Function],
}
`;

exports[`Example > Ghost matches snapshot 1`] = `
Object {
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__k": null,
  "constructor": undefined,
  "key": null,
  "props": Object {},
  "ref": null,
  "type": [Function],
}
`;
